--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body { height: 2500px; }
-.gauge {
+.jQuery {
   position:relative; width:100px; height:50px;
   border-radius:50px 50px 0 0;
   background:#41b7d8;
@@ -7,16 +7,14 @@ body { height: 2500px; }
      -moz-transition: background .3s;
       -ms-transition: background .3s;
           transition: background .3s;
+  position: fixed;
+  bottom: 100px;
+  left: 50px;        
 }
-.gauge .frame { 
+.jQuery .frame { 
   height:50px;
 }
-div#ember190 {
-	position: fixed;
-	bottom: 100px;
-	left: 50px;
-}
-.gauge .pointer {
+.jQuery .pointer { 
   width:4px; height:90%; margin-left:-2px;
   position:absolute; z-index:1; bottom:0; left:50%;
   background:white; border-radius:4px;
@@ -37,27 +35,27 @@ div#ember190 {
       -ms-transform-origin: bottom;
           transform-origin: bottom;
 }
-.gauge .pointer .pointer-cap {
+.jQuery .pointer .value {
+  width:60px; margin-left:-30px;
+  position:absolute; top:-25px;
+  font-size:10px; text-align:center;
+}
+.jQuery .labels {
+  width:100%;
+  position:absolute; top:100%;
+  font-size:10px; text-align:right;
+}
+.jQuery .pointer .pointer-cap {
   width:16px; height:16px;
   margin-bottom:-8px; margin-left:-8px;
   position:absolute; bottom:0; left:50%;
   background:white; border-radius:100%;
   /* box-shadow:1px 1px 5px rgba(0,0,0,.3); */
 }
-.gauge .pointer .value {
-  width:60px; margin-left:-30px;
-  position:absolute; top:-25px;
-  font-size:10px; text-align:center;
-}
-.gauge .labels {
-  width:100%;
-  position:absolute; top:100%;
-  font-size:10px; text-align:right;
-}
-.gauge .labels .min { float:left; }
+.jQuery .labels .min { float:left; }
 
-.gauge.exceeded { background:red; }
-.gauge.exceeded .value { color:red; }
+.jQuery.exceeded { background:red; }
+.jQuery.exceeded .value { color:red; }
 
 .value-exceeded { 
   width:100%; 
