--- a/style.scss
+++ b/style.scss
@@ -74,3 +74,15 @@ label { display:block; }
 }
 
 .form { margin:30px 0; }
+
+@media screen and (max-width: 768px) { 
+  .container {
+    position:relative; 
+    width:100%; 
+    height:20px;
+    border-radius:0;
+    bottom: 0px;
+    left: 0px;     
+    position: fixed;   
+  }
+}
