--- a/style.scss
+++ b/style.scss
@@ -6,8 +6,8 @@ input { max-width:100px; }
 label { display:block; }
 
 .container {
-  position:relative; width:100px; height:50px;
-  border-radius:50px 50px 0 0;
+  position:relative; width:50px; height:100px;
+  border-radius:0 50px 50px 0;
   background:#41b7d8;
   -webkit-transition: background .3s;
      -moz-transition: background .3s;
@@ -21,7 +21,9 @@ label { display:block; }
   height:50px;
 }
 .pointer { 
-  width:4px; height:90%; margin-left:-2px;
+  width:4px; height:45%; 
+  margin-left: -27px;
+  margin-bottom: 49px;
   position:absolute; z-index:1; bottom:0; left:50%;
   background:white; border-radius:4px;
   /* box-shadow:1px 1px 3px rgba(0,0,0,.3); */
@@ -31,10 +33,10 @@ label { display:block; }
       -ms-transition:     -ms-transform .3s ease 0s;
           transition:         transform .3s ease 0s;
   
-  -webkit-transform: rotate(-90deg);
-     -moz-transform: rotate(-90deg);
-      -ms-transform: rotate(-90deg);
-          transform: rotate(-90deg);
+  -webkit-transform: rotate(0deg);
+     -moz-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
   
   -webkit-transform-origin: bottom;
      -moz-transform-origin: bottom;
@@ -84,5 +86,9 @@ label { display:block; }
     bottom: 0px;
     left: 0px;     
     position: fixed;   
+  }
+  .pointer{
+    margin-bottom: 9px;
+    height: 0px;
   }
 }
